# xrslam

./: CMakeLists.txt  mi9.tum  mi9_circle_vins.tum
configs/: euroc_hwpd.yaml  euroc_mi9.yaml  euroc_realsense.yaml  euroc_sensor.yaml  euroc_slam.yaml
xrslam/: CMakeLists.txt
xrslam-extra/: CMakeLists.txt
xrslam-extra/include/xrslam/extra/: yaml_config.h
xrslam-extra/src/xrslam/extra/: opencv_image.cpp  yaml_config.cpp
xrslam-interface/include/: XRSLAM.h
xrslam-interface/src/: XRSLAMInternal.cpp  XRSLAMManager.cpp
xrslam-pc/: CMakeLists.txt
xrslam-pc/lightvis/: CMakeLists.txt
xrslam-pc/player/: CMakeLists.txt
xrslam-pc/player/src/: main.cpp  main_real.cpp  visualizer.cpp
xrslam-pc/player/src/IO/: dataset_reader.cpp  euroc_dataset_reader.h  phones_dataset_reader.cpp  phones_dataset_reader.h  trajectory_writer.h
xrslam/include/xrslam/: xrslam.h
xrslam/src/xrslam/: common.h  config.cpp  xrslam.cpp
xrslam/src/xrslam/core/: detail.cpp  detail.h  feature_tracker.cpp  frontend_worker.cpp  initializer.cpp  sliding_window_tracker.cpp
xrslam/src/xrslam/estimation/: preintegrator.cpp  solver.cpp  state.h
xrslam/src/xrslam/geometry/: stereo.h
xrslam/src/xrslam/map/: frame.cpp  map.cpp
xrslam/src/xrslam/utility/: debug.cpp  worker.cpp  worker.h
